--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,23 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <title>Avatar App</title>
   </head>
 
   <body>
     <div id="app"></div>
-  <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
+    <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => {
+        navigator.serviceWorker.register("./sw.js");
+      });
+    }
+  </script>
   </body>
 
 </html>
