--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,20 @@
     <div id="app"></div>
     <script src="./js/main.js"></script>
     <script>
+    const isLocalhost = ["localhost", "127.0.0.1", "[::1]"].includes(window.location.hostname);
+
     if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => {
+      window.addEventListener("load", async () => {
+        if (isLocalhost) {
+          const regs = await navigator.serviceWorker.getRegistrations();
+          await Promise.all(regs.map((r) => r.unregister()));
+          if (window.caches) {
+            const keys = await caches.keys();
+            await Promise.all(keys.map((k) => caches.delete(k)));
+          }
+          return;
+        }
+
         navigator.serviceWorker.register("./sw.js");
       });
     }
