--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,10 @@
           return;
         }
 
-        navigator.serviceWorker.register("./sw.js");
+        const reg = await navigator.serviceWorker.register("./sw.js?v=3", {
+          updateViaCache: "none"
+        });
+        reg.update();
       });
     }
   </script>
