--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css" />
     <link rel="stylesheet" href="./global.css" />
     <link rel="manifest" href="./manifest.webmanifest" />
+    <meta name="description" content="A tool that allows you to create, customize, and share custom avatars.">
     <title>Avatar Maker</title>
   </head>
 
